--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
+    "@ionic/storage": "^4.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "firebase": "^11.2.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
