--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "capacitor-biometric": "^1.0.3",
     "capacitor-native-biometric": "^4.2.2",
+    "cordova-plugin-fingerprint-aio": "^6.0.0",
     "firebase": "^11.2.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
